img backgnd e outros ajustesem oo

--- a/OwnerPet/WebContent/cadastroDono.xhtml
+++ b/OwnerPet/WebContent/cadastroDono.xhtml
@@ -49,7 +49,7 @@
 			</h:panelGrid>
 		</p:panel>
 		<p:commandButton value="Cancelar" />
-		<p:commandButton value="Salvar" action="#{donoMB.saveMessage()}"  update="messages" type="submit"/>
+		<p:commandButton value="Salvar" action="#{donoMB.saveMessage}"  update="messages" type="submit"/>
 		</p:fieldset>
 
 	</h:form>
